[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/iceblocks.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Level3.gd" type="Script" id=3]
[ext_resource path="res://scenes/base_terrain.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Bridge0.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Bridge4.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Bridge3.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Bridge6.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Bridge5.gd" type="Script" id=9]
[ext_resource path="res://Scripts/Bridge1.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Bridge2.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Bridge7.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 24.6813, 72.0525 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 36.3725, 72.0526 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 29.2279, 68.1579 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 35.0736, 70.1052 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 24.6814, 68.1578 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 24.6815, 72.0526 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 24.6813, 68.1578 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 27.2794, 70.1053 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 51.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 405.5, 17.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 114 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 12.25 )

[node name="Level3" type="Node2D"]
script = ExtResource( 3 )

[node name="Terrain" type="Node2D" parent="."]

[node name="Bridge0" type="Sprite" parent="Terrain"]
position = Vector2( 249, 200 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge0/Area2D"]
position = Vector2( 3.89709, 3.89502 )
shape = SubResource( 5 )

[node name="Bridge1" type="Sprite" parent="Terrain"]
position = Vector2( 247, 342 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 10 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge1/Area2D"]
position = Vector2( 18.1863, -1.94739 )
shape = SubResource( 6 )

[node name="Bridge2" type="Sprite" parent="Terrain"]
position = Vector2( 420, 199 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 11 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge2/Area2D"]
position = Vector2( 21.4337, 0 )
shape = SubResource( 7 )

[node name="Bridge3" type="Sprite" parent="Terrain"]
position = Vector2( 423, 340 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge3/Area2D"]
position = Vector2( 19.4855, 0 )
shape = SubResource( 8 )

[node name="Bridge4" type="Sprite" parent="Terrain"]
position = Vector2( 598, 200 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge4/Area2D"]
position = Vector2( 14.2892, 1.94708 )
shape = SubResource( 9 )

[node name="Bridge5" type="Sprite" parent="Terrain"]
position = Vector2( 602, 342 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 9 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge5/Area2D"]
position = Vector2( 19.4852, -1.94739 )
shape = SubResource( 10 )

[node name="Bridge6" type="Sprite" parent="Terrain"]
position = Vector2( 778, 202 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge6/Area2D"]
position = Vector2( 16.8871, -6.10352e-05 )
shape = SubResource( 11 )

[node name="Bridge7" type="Sprite" parent="Terrain"]
position = Vector2( 778, 342 )
scale = Vector2( 0.384906, 0.256757 )
texture = ExtResource( 1 )
script = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="Terrain/Bridge7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/Bridge7/Area2D"]
position = Vector2( 11.6912, -0.00012207 )
shape = SubResource( 12 )

[node name="TileMap2" parent="Terrain" instance=ExtResource( 4 )]
tile_data = PoolIntArray( 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655400, 0, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655405, 0, 0, 655411, 0, 0, 655412, 0, 0, 655413, 0, 0, 655414, 0, 0, 655415, 0, 0, 655416, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720925, 0, 0, 720926, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720936, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720947, 0, 0, 720948, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720952, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786472, 0, 0, 786473, 0, 0, 786474, 0, 0, 786475, 0, 0, 786476, 0, 0, 786477, 0, 0, 786483, 0, 0, 786484, 0, 0, 786485, 0, 0, 786486, 0, 0, 786487, 0, 0, 786488, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852008, 0, 0, 852009, 0, 0, 852010, 0, 0, 852011, 0, 0, 852012, 0, 0, 852013, 0, 0, 852019, 0, 0, 852020, 0, 0, 852021, 0, 0, 852022, 0, 0, 852023, 0, 0, 852024, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917544, 0, 0, 917545, 0, 0, 917546, 0, 0, 917547, 0, 0, 917548, 0, 0, 917549, 0, 0, 917555, 0, 0, 917556, 0, 0, 917557, 0, 0, 917558, 0, 0, 917559, 0, 0, 917560, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983069, 0, 0, 983070, 0, 0, 983071, 0, 0, 983072, 0, 0, 983073, 0, 0, 983074, 0, 0, 983080, 0, 0, 983081, 0, 0, 983082, 0, 0, 983083, 0, 0, 983084, 0, 0, 983085, 0, 0, 983091, 0, 0, 983092, 0, 0, 983093, 0, 0, 983094, 0, 0, 983095, 0, 0, 983096, 0, 0, 1048583, 0, 0, 1048584, 0, 0, 1048585, 0, 0, 1048586, 0, 0, 1048587, 0, 0, 1048588, 0, 0, 1048594, 0, 0, 1048595, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1048605, 0, 0, 1048606, 0, 0, 1048607, 0, 0, 1048608, 0, 0, 1048609, 0, 0, 1048610, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048627, 0, 0, 1048628, 0, 0, 1048629, 0, 0, 1048630, 0, 0, 1048631, 0, 0, 1048632, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114130, 0, 0, 1114131, 0, 0, 1114132, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1114135, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114145, 0, 0, 1114146, 0, 0, 1114152, 0, 0, 1114153, 0, 0, 1114154, 0, 0, 1114155, 0, 0, 1114156, 0, 0, 1114157, 0, 0, 1114163, 0, 0, 1114164, 0, 0, 1114165, 0, 0, 1114166, 0, 0, 1114167, 0, 0, 1114168, 0, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179666, 0, 0, 1179667, 0, 0, 1179668, 0, 0, 1179669, 0, 0, 1179670, 0, 0, 1179671, 0, 0, 1179677, 0, 0, 1179678, 0, 0, 1179679, 0, 0, 1179680, 0, 0, 1179681, 0, 0, 1179682, 0, 0, 1179688, 0, 0, 1179689, 0, 0, 1179690, 0, 0, 1179691, 0, 0, 1179692, 0, 0, 1179693, 0, 0, 1179699, 0, 0, 1179700, 0, 0, 1179701, 0, 0, 1179702, 0, 0, 1179703, 0, 0, 1179704, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245224, 0, 0, 1245225, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1245237, 0, 0, 1245238, 0, 0, 1245239, 0, 0, 1245240, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1310738, 0, 0, 1310739, 0, 0, 1310740, 0, 0, 1310741, 0, 0, 1310742, 0, 0, 1310743, 0, 0, 1310749, 0, 0, 1310750, 0, 0, 1310751, 0, 0, 1310752, 0, 0, 1310753, 0, 0, 1310754, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1310762, 0, 0, 1310763, 0, 0, 1310764, 0, 0, 1310765, 0, 0, 1310771, 0, 0, 1310772, 0, 0, 1310773, 0, 0, 1310774, 0, 0, 1310775, 0, 0, 1310776, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376274, 0, 0, 1376275, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376296, 0, 0, 1376297, 0, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1376309, 0, 0, 1376310, 0, 0, 1376311, 0, 0, 1376312, 0, 0, 1441799, 0, 0, 1441800, 0, 0, 1441801, 0, 0, 1441802, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1441810, 0, 0, 1441811, 0, 0, 1441812, 0, 0, 1441813, 0, 0, 1441814, 0, 0, 1441815, 0, 0, 1441821, 0, 0, 1441822, 0, 0, 1441823, 0, 0, 1441824, 0, 0, 1441825, 0, 0, 1441826, 0, 0, 1441832, 0, 0, 1441833, 0, 0, 1441834, 0, 0, 1441835, 0, 0, 1441836, 0, 0, 1441837, 0, 0, 1441843, 0, 0, 1441844, 0, 0, 1441845, 0, 0, 1441846, 0, 0, 1441847, 0, 0, 1441848, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507368, 0, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507372, 0, 0, 1507373, 0, 0, 1507379, 0, 0, 1507380, 0, 0, 1507381, 0, 0, 1507382, 0, 0, 1507383, 0, 0, 1507384, 0, 0 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D4"]
position = Vector2( 600, 270 )
shape = SubResource( 1 )

[node name="StaticBody2D7" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D7"]
position = Vector2( 423, 269 )
shape = SubResource( 1 )

[node name="StaticBody2D11" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D11"]
position = Vector2( 248, 271 )
shape = SubResource( 1 )

[node name="StaticBody2D25" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D25"]
position = Vector2( 775, 272 )
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D"]
position = Vector2( 510, 143 )
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D2"]
position = Vector2( 510, 402 )
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D3"]
position = Vector2( 102, 274 )
shape = SubResource( 3 )

[node name="StaticBody2D5" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D5"]
position = Vector2( 922, 272 )
shape = SubResource( 3 )

[node name="StaticBody2D6" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D6"]
position = Vector2( 247, 169 )
shape = SubResource( 4 )

[node name="StaticBody2D8" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D8"]
position = Vector2( 424, 167 )
shape = SubResource( 4 )

[node name="StaticBody2D9" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D9"]
position = Vector2( 600, 169 )
shape = SubResource( 4 )

[node name="StaticBody2D10" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D10"]
position = Vector2( 248, 373 )
shape = SubResource( 4 )

[node name="StaticBody2D12" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D12"]
position = Vector2( 424, 372 )
shape = SubResource( 4 )

[node name="StaticBody2D13" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D13"]
position = Vector2( 601, 372 )
shape = SubResource( 4 )

[node name="StaticBody2D14" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D14"]
position = Vector2( 776, 372 )
shape = SubResource( 4 )

[node name="StaticBody2D15" type="StaticBody2D" parent="Terrain"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Terrain/StaticBody2D15"]
position = Vector2( 775, 171 )
shape = SubResource( 4 )

[node name="Player" parent="." groups=["player"] instance=ExtResource( 2 )]
position = Vector2( 154, 257 )

[connection signal="body_entered" from="Terrain/Bridge0/Area2D" to="Terrain/Bridge0" method="_on__body_entered"]
[connection signal="body_entered" from="Terrain/Bridge1/Area2D" to="Terrain/Bridge1" method="_on_body_entered"]
[connection signal="body_entered" from="Terrain/Bridge2/Area2D" to="Terrain/Bridge2" method="_on_body_entered"]
[connection signal="body_entered" from="Terrain/Bridge3/Area2D" to="Terrain/Bridge3" method="_on_body_entered"]
[connection signal="body_entered" from="Terrain/Bridge4/Area2D" to="Terrain/Bridge4" method="_on_body_entered"]
[connection signal="body_entered" from="Terrain/Bridge5/Area2D" to="Terrain/Bridge5" method="_on_body_entered"]
[connection signal="body_entered" from="Terrain/Bridge6/Area2D" to="Terrain/Bridge6" method="_on_body_entered"]
[connection signal="body_entered" from="Terrain/Bridge7/Area2D" to="Terrain/Bridge7" method="_on_body_entered"]
